resolved overflow for a 280px device

--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,9 @@
 
 
 .brand {
-  font-size: 4em;
+  font-size: 3.4em;
   font-family: "Satisfy";
-  padding: 15px;
+  padding: 2%;
 }
 .footerlink{
   font-size: 15px;
@@ -30,7 +30,6 @@
 
 }
 #navbar {
-  border-bottom: 2px solid #b3b3b3;
   background-color: #e9ecef;
 }
 .ruler{
@@ -150,27 +149,24 @@ form > #author::placeholder {
   max-width: 100%;
   width: 100%;
 }
-.space{
-  margin-bottom: 20px;
+@media (min-width: 768px){
+  .space{
+    position: -webkit-sticky !important;
+    position: sticky; 
+    top: 0 !important;
+  }
 }
 
 center {
   padding: 1.2em;
 }
-/* .blogview{
-  margin-left: 1%;
-  margin-right: 1%;
-  padding-right: 2%;
-  padding-left: 2%;
-  float: unset;
-  display: block;
-} */
+
 .App {
   text-align: center;
 }
 #heading{
   font-family: 'Quicksand';
-  padding-left: 21%;
+  padding-left: 10%;
   padding-bottom: 20px;
   font-size: 3em;
   text-align:left;
@@ -360,22 +356,23 @@ Link:hover {
   color: white;
 }
 
-.Jumbotron h1 {
-  text-align: center;
-  padding: 50px;
-  font-size: 70px;
+.Jumbotron div.head {
+  width: 50%;
+  max-width: 60%;
+  padding: 4%;
+  font-size: 3.2em;
   color: rgb(0, 0, 0);
   font-family: "Poiret One";
   font-weight: lighter;
-  text-align: center;
+  overflow-wrap:inherit;
 }
 
 .Jumbotron p {
   text-align: center;
-  font-size: 30px;
+  font-size: 1.8em;
   font-weight: lighter;
   font-family: "Old Standard TT";
-  padding: 50px 50px 50px 50px;
+  padding: 1.8em;
   color: black;
   text-shadow: black;
 }
